# meme_sentiment_analyzer

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  coins.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements-ml.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml
config/: __init__.py  coins.yaml  config.yaml  settings.py  thresholds.py
data_sources/: __init__.py  base.py  coingecko.py  discord_source.py  reddit.py  twitter_source.py
engine/: __init__.py  generator.py  meme_agent.py  ranker.py
engine/backtest/: __init__.py  backtester.py  metrics.py
engine/ml/: __init__.py  features.py  predictor.py
tests/: conftest.py  test_coingecko.py  test_ranker.py  test_rules_engine.py  test_sentiment_analyzer.py
utils/: __init__.py  charts.py  rules_engine.py  sentiment_analyzer.py
utils/notifications/: __init__.py  discord.py  telegram.py
